@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.2 2005/02/22 21:06:06 agc Exp $
+$NetBSD: distinfo,v 1.3 2005/08/14 07:42:12 wulf Exp $
 
-SHA1 (cwtext-0.91.tar.gz) = 756e9acda2e5fee8f4be06bf3835dd04f83b216c
-RMD160 (cwtext-0.91.tar.gz) = abd0ae6d611997282df9a4f9c3793eb18af253dd
-Size (cwtext-0.91.tar.gz) = 11802 bytes
+SHA1 (cwtext-0.94.tar.gz) = ad2dc3002cbb977d8b735680820d4264bb7cc184
+RMD160 (cwtext-0.94.tar.gz) = 5b7f78dd84665850de383489df20a8c4b1428a96
+Size (cwtext-0.94.tar.gz) = 12957 bytes
